--last:getDate for the assigned date