@@ -8,13 +8,14 @@ import { SignupComponent } from './users/signup/signup.component';
 import { SigninComponent } from './users/signin/signin.component';
 import { BrowserAnimationsModule } from '@angular/platform-browser/animations';
 import { NavbarComponent } from './navbar/navbar.component';
-import {MatInputModule} from '@angular/material/input';
-import {MatFormFieldModule, matFormFieldAnimations} from '@angular/material/form-field';
 import { ReactiveFormsModule } from '@angular/forms';
 import {CardModule} from 'primeng/card';
 import { FormsModule } from '@angular/forms';
 import { HttpClientModule } from '@angular/common/http';
 import { TasksComponent } from './tasks/tasks.component';
+import { UserlistComponent } from './userlist/userlist.component';
+import { FilterpipePipe } from '../shared/filterpipe.pipe';
+import { SortPipe } from '../shared/sort.pipe';
 
 @NgModule({
   declarations: [
@@ -24,13 +25,14 @@ import { TasksComponent } from './tasks/tasks.component';
     SigninComponent,
     NavbarComponent,
     TasksComponent,
+    UserlistComponent,
+    FilterpipePipe,
+    SortPipe,
   ],
   imports: [
     BrowserModule,
     AppRoutingModule,
     BrowserAnimationsModule,
-    MatInputModule,
-    MatFormFieldModule,
     ReactiveFormsModule,
     CardModule,
     FormsModule,
