@@ -25,7 +25,7 @@
 
 
         <li class="nav-item">
-          <a class="nav-link" *ngIf="adminOps" routerLink="/UserList">UserList</a>
+          <a class="nav-link" *ngIf="adminOps" routerLink="/userlist">UserList</a>
         </li>
       </ul>
       <ul class="ms-auto navbar-nav ">
