@@ -1,4 +1,27 @@
 <div class="container">
+  <h1 class="text-center">Tasks Assigned</h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <select (change)="onSelectingOption($event)">
+            <option value="" disabled selected hidden>Sorting</option>
+            <option value="uasc">User:Ascending</option>
+            <option value="udesc">User:Descending</option>
+          </select>
+    
+
+        </ul>
+        <input name="filterSearch" class="ms-auto w-25" type="text" [(ngModel)]="filterTerm"
+          placeholder="Search (Title)" aria-label="Search">
+
+      </div>
+    </div>
+  </nav>
   <button class="btn btn-primary float-end my-3" data-bs-toggle="modal" *ngIf="adminOps"
     data-bs-target="#exampleModal">Add Task</button>
   <table class="table table-striped table-responsive" *ngIf="!noTasks">
@@ -7,6 +30,8 @@
     <th>Title</th>
 
     <th *ngIf="adminOps">Assigned To</th>
+
+    <th>Assigned By</th>
 
     <th>Assigned Date</th>
 
@@ -20,10 +45,11 @@
 
 
     <tbody>
-      <tr *ngFor="let x of taskData">
+      <tr *ngFor="let x of taskData | filterpipe:filterTerm |sort:[sortingParam,sortingDirection]">
         <td *ngIf="adminOps">{{x.id}}</td>
         <td>{{x.title|titlecase}}</td>
         <td *ngIf="adminOps">{{x.userName}}</td>
+        <td>{{x.assignedBy}}</td>
         <td>{{x.assignedDate|date}}</td>
         <td>{{x.dueDate|date}}</td>
         <td>{{getDaysLeft(x.assignedDate,x.dueDate)}}</td>
@@ -32,13 +58,15 @@
         <td>
           <button class="btn btn-outline-info ms-2" *ngIf="adminOps">Edit</button>
           <button (click)="deleteTask(x.id)" class="btn btn-outline-danger ms-2" *ngIf="adminOps">Delete</button>
-          <button (click)="updateStatus(x)" data-bs-toggle="modal" data-bs-target="#myModal" *ngIf="!adminOps">Update Status</button>
+          <button class="btn btn-outline-primary" (click)="updateStatus(x)" data-bs-toggle="modal"
+            data-bs-target="#myModal" *ngIf="!adminOps">Update
+            Status</button>
         </td>
       </tr>
     </tbody>
   </table>
 </div>
-<!-- Modal for editing whole task -->
+<!-- Modal for adding task -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -72,7 +100,8 @@
             Due Date:<input #dueDate type="date" name="dueDate" [(ngModel)]="taskDetails.dueDate">
           </div>
 
-          <button type="submit" (click)="assignedDate.value='';dueDate.value='';title.value=''" class="btn btn-primary" data-bs-dismiss="modal">Post Task</button>
+          <button type="submit" (click)="assignedDate.value='';dueDate.value='';title.value=''" class="btn btn-primary"
+            data-bs-dismiss="modal">Post Task</button>
         </form>
       </div>
 
@@ -90,18 +119,19 @@
       </div>
       <div class="modal-body">
         <select [(ngModel)]="currentStatus" required>
-          <option >{{currentStatus}}</option>
+          <option disabled>{{currentStatus}}</option>
           <option value="Pending">Pending</option>
           <option value="Done">Accomplished</option>
         </select>
-        <button (click)="putTaskStatus()">Set Status</button>
+        <button class="btn btn-outline-info" (click)="putTaskStatus()">Set Status</button>
       </div>
     </div>
   </div>
 </div>
 
-<div class="bg-black" id="fireworks" *ngIf="noTasks">
-  <h1 class="mt-5 text-white text-center">YooHooo!!Tasks are Done</h1> 
-<div class="firework" ></div>
-<div class="firework"></div>
-<div class="firework"></div></div>
+<div class="bg-black" id="fireworks" *ngIf="noTasks && !adminOps">
+  <h1 class="mt-5 text-white text-center">YooHooo!!Tasks are Done</h1>
+  <div class="firework"></div>
+  <div class="firework"></div>
+  <div class="firework"></div>
+</div>
