@@ -6,19 +6,58 @@
       "email": "kokki@gmail.com",
       "password": "Kokki@123",
       "role": "admin",
-      "isLogged": false,
+      "isLogged": true,
       "id": 1
     },
     {
-      "firstName": "PuliMuruganRaja",
-      "lastName": "Vel",
-      "email": "ghilli@gmail.com",
-      "password": "Hello@123",
+      "firstName": "Srikanth",
+      "lastName": "Coder",
+      "email": "sri027.cvb@gmail.com",
+      "password": "Srikanth@123",
       "role": "user",
+      "isLogged": false,
+      "id": 2
+    },
+    {
+      "firstName": "pallavi",
+      "lastName": "katari",
+      "email": "pallavi@g",
+      "password": "Pallavi@123",
+      "role": "admin",
       "isLogged": false,
       "id": 3
     }
   ],
-  "session": [],
-  "tasks": []
+  "session": [
+    {
+      "email": "kokki@gmail.com",
+      "role": "admin",
+      "userId": 1,
+      "firstName": "KokkiKumar",
+      "id": 1
+    }
+  ],
+  "tasks": [
+
+    {
+      "userid": 2,
+      "title": "CRUD Task",
+      "id": 1,
+      "assignedDate": "2023-07-18",
+      "dueDate": "2023-07-22",
+      "userName": "Srikanth",
+      "status": "Done",
+      "assignedBy": "pallavi"
+    },
+    {
+      "userid": 2,
+      "title": "CRUD",
+      "id": 1,
+      "assignedDate": "2023-07-18",
+      "dueDate": "2023-07-22",
+      "userName": "akshay",
+      "status": "Done",
+      "assignedBy": "pallavi"
+    }
+  ]
 }
