@@ -1,1 +1,5 @@
 --last:getDate for the assigned date
+register-pic,skilled in
+userlist-card for each user,button view profile,specialised in
+sorting-status
+admin edit task
